Fixed spacing issue on previous articles page

--- a/assets/less/reece-trade-outlet.less
+++ b/assets/less/reece-trade-outlet.less
@@ -550,7 +550,8 @@
 
 	.previous-article-tag {
 		display: block;
-		margin: 10px 0 0;
+		margin-top: 10px;
+		margin-bottom: 10px;
 	}	
 
 	.accordion-heading.active {
